--- a/innoByte/style.css
+++ b/innoByte/style.css
@@ -1,4 +1,6 @@
-
+body{
+   padding-top: 70px;
+}
 .nav{
     margin-left: 200px;   
 }
@@ -54,7 +56,7 @@ text-align: center;
     margin: 80px;
  }
  .o{
-    height: 60vh;
+    height:120vh;
  }
  .im{
     width:28px;
